# example-repo

./: LICENSE  README.md  pyproject.toml
data/examples/: README.md
data/inputs/: README.md
data/outputs/: README.md
notebooks/: sample_notebook.ipynb
src/myproject/: main.py
tests/: test_example.py
